overflow issue

--- a/src/routes/education/education.css
+++ b/src/routes/education/education.css
@@ -29,7 +29,7 @@
 
 #education-card {
   text-align: center;
-  padding: 3rem 1.5rem;
+  padding: 1.5rem 1.5rem;
   width: 80%;
   margin: 0 auto;
   border: 2px solid rgba(255, 255, 255, 0.1);
